Connecting address with ropsten using wallet connect provider

--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/providers": "^5.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.4.1",
+    "antd": "^4.16.5",
+    "burner-provider": "^1.0.38",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eth-hooks": "^1.1.2",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "v": "^0.3.0",
     "web-vitals": "^1.0.1",
     "web3modal": "^1.9.3"
   },
