--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ethersproject/address": "^5.4.0",
+    "@ethersproject/contracts": "^5.4.0",
     "@ethersproject/providers": "^5.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -17,11 +18,13 @@
     "eslint-config-airbnb": "^18.2.1",
     "eth-hooks": "^1.1.2",
     "husky": "^6.0.0",
+    "ipfs-http-client": "^50.1.2",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "v": "^0.3.0",
     "web-vitals": "^1.0.1",
