Hackathonish things done

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.4.1",
     "antd": "^4.16.5",
+    "axios": "^0.21.1",
     "burner-provider": "^1.0.38",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
